feat: add support for Gherkin step comments
- update `GherkinStep` and `FilteredPhrase` to capture preceding and inline step comments.
- introduce `DecoratedFilteredPhrase` to wrap phrases with their associated comments.
- propagate extracted step comments into `TestCase` metadata.
- update grammar files
- add `StepCommentsTest` and `step_comments.feature` to verify comment parsing and metadata storage
- improve Python script 'gherkin_template_processor.py' for generating grammar files (*.g4)